<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editTextTextNameTodo"
        android:layout_width="270dp"
        android:layout_height="58dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_text_name_todo"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextMultiLineDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/edit_text_description"
        android:inputType="textMultiLine"
        android:maxLength="@integer/material_motion_duration_long_1"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextNameTodo"
        app:layout_constraintVertical_bias="0.726" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="148dp"
        android:layout_height="55dp"
        android:text="@string/text_button_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLineDescription"
        app:layout_constraintVertical_bias="0.451" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="269dp"
        android:layout_height="50dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableEnd="@drawable/ic_baseline_calendar"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/text_date"
        android:inputType="date|textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/dark_gray"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editTextTimeStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextNameTodo"
        app:layout_constraintVertical_bias="0.454"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTimeStart"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:drawableEnd="@drawable/ic_baseline_access_time"
        android:ems="10"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/text_time_start"
        android:textColor="@color/dark_gray"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextNameTodo"
        app:layout_constraintVertical_bias="0.39"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTimeFinish"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:drawableEnd="@drawable/ic_baseline_access_time"
        android:textColor="@color/dark_gray"
        android:ems="10"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/text_time_finish"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTimeStart"
        app:layout_constraintVertical_bias="0.161"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>